this  is the last edited version of crud-project

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,6 +11,7 @@ body {
   }
   50% {
     background-position: 100% 50%;
+    background-color: #e73c7e;
   }
   100% {
     background-position: 0% 50%;
